preventing collection buttons from wrapping

--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,7 @@
+.collection-buttons {
+    white-space: nowrap;
+}
+
 #waiting {
     position: fixed;
     top: 40%;
